Fix LittleEngineOOP module and CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,22 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Add engine as a subdirectory (Git submodule)
-add_subdirectory(LittleEngine)
+add_subdirectory(LittleEngineOOP)
 
 # Game sources
 file(GLOB_RECURSE LITTLE_SURVIVOR_SRC CONFIGURE_DEPENDS
         Game/src/*.cpp
-        Game/include/*.h)
+        Game/include/*.h
+        Game/Main.cpp
+)
 
-add_executable(LittleSurvivor ${LITTLE_SURVIVOR_SRC})
+add_executable(LittleSurvivor ${LITTLE_SURVIVOR_SRC}
+        Game/include/aaa.cpp
+        Game/include/aaa.h)
 
-# Set include path to find Engine headers
+# Set include path to find headers
 target_include_directories(LittleSurvivor PRIVATE
-    ${CMAKE_SOURCE_DIR}/Game/include
+        ${CMAKE_SOURCE_DIR}/Game/include
 )
 
 # Link against the engine
