--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "LittleEngine-OOP"]
-	path = LittleEngine-OOP
-	url = https://github.com/Haiito92/LittleEngine-OOP
+[submodule "LittleEngineOOP"]
+	path = LittleEngineOOP
+	url = https://github.com/Haiito92/LittleEngineOOP
